# DonkeyKong

./: CMakeLists.txt  README.md  client.txt  main.cpp  mainClient.cpp  server.txt
cmake/: FindSDL2_ttf.cmake  Findnlohmann_json.cmake
model/: Position.cpp  mario.cpp  mario.h
resources/txt/: config.json  default_config.json
src/: Constants.h  Queue.cpp  Queue.h
src/Client/: Client.cpp  Client.h  ClientSocket.cpp  ClientSocket.h  SoundSystem.cpp  SoundSystem.h  credentials.cpp  credentials.h  mainClient.cpp  mainClient.h
src/Server/: Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  mainServer.cpp  mainServer.h
src/Socket/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
src/controller/: Configuration.cpp  Configuration.h  GameController.cpp  GameController.h  LevelLoader.cpp  LevelLoader.h  LoginController.cpp  LoginController.h  PlayerController.cpp  PlayerController.h  QueueThrd.cpp  QueueThrd.h
src/model/: Barrel.cpp  Barrel.h  BarrelMovement.cpp  BarrelMovement.h  Boss.cpp  Boss.h  Collider.cpp  Collider.h  Enemy.cpp  Enemy.h  EnemyFire.cpp  EnemyFire.h  Entity.cpp  Entity.h  Fire.cpp  Fire.h  Game.cpp  Game.h  Hammer.cpp  Hammer.h  Ladder.cpp  Ladder.h  Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  Logger.cpp  Logger.h  Platform.cpp  Platform.h  PlatformMovement.cpp  PlatformMovement.h  Player.cpp  Player.h  Position.cpp  Position.h  Princess.cpp  Princess.h  Stair.cpp  Stair.h  (+9 more)
src/model/levels/: level1.json  level1.txt  level1fire.txt  level1moveplat.txt  level1stairs.txt  level2.json  level2.txt  level2stairs.txt
src/model/player/: ClimbingState.cpp  ClimbingState.h  DeadState.cpp  DeadState.h  GodState.cpp  GodState.h  HammerState.cpp  HammerState.h  JumpingState.cpp  JumpingState.h  NormalState.cpp  NormalState.h  Player.cpp  Player.h  PlayerEvent.cpp  PlayerEvent.h  PlayerState.h  WalkingState.cpp  WalkingState.h  WinState.cpp  WinState.h
src/view/: Animator.cpp  Animator.h  LevelDrawer.cpp  LevelDrawer.h  LoginButton.cpp  LoginButton.h  LoginView.cpp  LoginView.h  PlayerAnimator.cpp  PlayerAnimator.h  PlayerIndicator.cpp  PlayerIndicator.h  TextureLoader.cpp  TextureLoader.h  TextureManager.cpp  TextureManager.h  ViewManager.cpp  ViewManager.h  background.cpp  background.h  ltexture.cpp  ltexture.h  viewManager.cpp  viewManager.h
